Добавляет бесконечный скролл

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,6 @@
       <button class="searchBtn" type="submit">search</button>
     </form>
     <ul class="gallery"></ul>
-    <button id="load-more-button" class="load-more hidden-button">
-      Load more
-    </button>
+    <div id="infinite-scroll-trigger" class="hidden"></div>
   </body>
 </html>
